# myCalendarMCP

./: .gitignore  CLAUDE.md  README.md  README_ja.md  pyproject.toml  request_calendar_permission.py  run_mcp.py  test_mcp.py
.kiro/settings/: mcp.json
calendar_mcp/: __init__.py  __main__.py  server.py
docs/: 01-mcp-overview.md  02-architecture.md  03-best-practices.md  04-troubleshooting.md  05-call-methods-comparison.md  06-mcp-client-significance.md  07-llm-mcp-relationship.md  11-mcp-libraries-reference.md  README.md
script/: debug_tools.py  mcp_client_test  query  server  setup  test
tests/: conftest.py  test_tools.py
